created classcode page

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div class="nav"></div>
+    <div class="nav">
+    </div>
     <div class="main">
         <button id="create-classroom">Create Classroom!</button>
     </div>
