linked start class button with ipc

--- a/public/html/classcode.html
+++ b/public/html/classcode.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1 class="class_code"></h1>
-    <button id="create-classroom">Start class</button>
+    <button id="start-class">Start class</button>
 </body>
 </html>
