display question cards with delete button

--- a/public/html/classroom.html
+++ b/public/html/classroom.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="../js/classroom.js"></script>
+
 </head>
 <body>
-    Classroom
+    <p>Classroom</p>
+    <div class="questions">
+        
+    </div>
 </body>
 </html>
