--- a/public/html/classroom.html
+++ b/public/html/classroom.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p>Classroom</p>
+    <button id="end-class">End class</button>
     <div class="questions">
         
     </div>
