--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <!-- <link rel="stylesheet" href="../css/dashboard.css"> -->
+    <link rel="stylesheet" href="../css/dashboard.css">
     <script src="../js/dashboard.js"></script>
 </head>
 
 <body>
     <div class="nav">
+    </div>
+    <div class="graphs">
+        <canvas id="confusion" width="400" height="400"></canvas>
+        <canvas id="ratings" width="400" height="400"></canvas>
+        <canvas id="attendance" width="400" height="400"></canvas>
     </div>
     <div class="main">
         <button id="create-classroom">Create Classroom!</button>
