displays real time confusion graph and generates initial confusion value

--- a/public/html/classroom.html
+++ b/public/html/classroom.html
@@ -10,8 +10,10 @@
 <body>
     <p>Classroom</p>
     <button id="end-class">End class</button>
-    <div class="questions">
-        
+    <div class="confusion">
+        <canvas id="session_confusion" width="400" height="400"></canvas>
+    </div>
+    <div class="questions"> 
     </div>
 </body>
 </html>
