discriminates notifications by classcodes !

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>edfusion educator</h1>
+    <img src="../assets//logo.svg" class="logo" alt="">
     <div class="login-ctr">
         <h2 class="login-header">Log In</h2>
         <form class="login-inputs">
