working reviews backend

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -21,6 +21,9 @@
     <div class="main">
         <button id="create-classroom">Create Classroom!</button>
     </div>
+    <div class="graphs">
+        <canvas id="session-confusion" width="400" height="400"></canvas>
+    </div>
 </body>
 
 </html>
