put some starter code for rating

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -24,6 +24,12 @@
     <div class="graphs">
         <canvas id="session-confusion" width="400" height="400"></canvas>
     </div>
+    <div class="stars">
+        <!-- MEHUL ADD STARS HERE -->
+    </div>
+    <div class="reviews">
+        
+    </div>
 </body>
 
 </html>
