stars were added

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -7,6 +7,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="../css/dashboard.css">
+    
     <script src="../js/dashboard.js"></script>
 </head>
 
@@ -26,6 +27,11 @@
     </div>
     <div class="stars">
         <!-- MEHUL ADD STARS HERE -->
+        <div class = "star" onclick = "fillStars(1);"><img id = "star1" src="./assets/Icon_material-star-border.svg" ></div>
+        <div class = "star" onclick = "fillStars(2);"><img id = "star2" src="./assets/Icon_material-star-border.svg" ></div>
+        <div class = "star" onclick = "fillStars(3);"><img id = "star3" src="./assets/Icon_material-star-border.svg" ></div>
+        <div class = "star" onclick = "fillStars(4);"><img id = "star4" src="./assets/Icon_material-star-border.svg" ></div>
+        <div class = "star" onclick = "fillStars(5);"><img id = "star5" src="./assets/Icon_material-star-border.svg" ></div>
     </div>
     <div class="reviews">
         
