resolved mongo connection leak thing

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -26,15 +26,13 @@
         <canvas id="session-confusion" width="400" height="400"></canvas>
     </div>
     <div class="stars">
-        <!-- MEHUL ADD STARS HERE -->
-        <div class = "star" onclick = "fillStars(1);"><img id = "star1" src="./assets/Icon_material-star-border.svg" ></div>
-        <div class = "star" onclick = "fillStars(2);"><img id = "star2" src="./assets/Icon_material-star-border.svg" ></div>
-        <div class = "star" onclick = "fillStars(3);"><img id = "star3" src="./assets/Icon_material-star-border.svg" ></div>
-        <div class = "star" onclick = "fillStars(4);"><img id = "star4" src="./assets/Icon_material-star-border.svg" ></div>
-        <div class = "star" onclick = "fillStars(5);"><img id = "star5" src="./assets/Icon_material-star-border.svg" ></div>
+        <div class = "star"><img id = "star1" src="../assets/Icon_material-star-border.svg"></div>
+        <div class = "star"><img id = "star2" src="../assets/Icon_material-star-border.svg"></div>
+        <div class = "star"><img id = "star3" src="../assets/Icon_material-star-border.svg"></div>
+        <div class = "star"><img id = "star4" src="../assets/Icon_material-star-border.svg"></div>
+        <div class = "star"><img id = "star5" src="../assets/Icon_material-star-border.svg"></div>
     </div>
     <div class="reviews">
-        
     </div>
 </body>
 
