login file updated css

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,16 +12,39 @@
 
 <body>
     <img src="../assets//logo.svg" class="logo" alt="">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+
     <div class="login-ctr">
         <h2 class="login-header">Log In</h2>
+        <br/>
+
         <form class="login-inputs">
             <label for="username">username</label>
             <input class="textfield user" name="username" type="text" />
             <label for="password">password</label>
-            <input class="textfield pass" name="password" type="text" />
-            <button type="submit">Submit!</button>
+            <input class="textfield pass" name="password" type="password" />
+            <br/>
+            <br/>
+            <button type="submit">Let's go!</button>
         </form>
     </div>
+  
+     <br/>
+     <br/>
+     <br/>
+     <br/>
+     <br/>
+     <br/>
+
+    <h3 class="bottom">edfusion</h3>
+
+
 </body>
 
 </html>
