removed brs on login page and replaced with padding, set colors with vars and changed font

--- a/public/html/classcode.html
+++ b/public/html/classcode.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Code</title>
+
+    <link rel="stylesheet" href="../css/general.css">
+    <link rel="stylesheet" href="../css/classcode.css">
+
     <script src="../js/classcode.js"></script>
 </head>
 <body>
-    <h1 class="class_code"></h1>
-    <button id="start-class">Start class</button>
+    <img src="../assets/logo.svg" class="logo" alt="">
+    <div class="main-ctr">
+        <h2 class="guide">Go to <strong>edfusion.herokuapp.com</strong> and enter this class code:</h2>
+        <div class="code-ctr">
+            <h1 class="class_code"></h1>
+        </div>
+        <button id="start-class">begin session</button>
+    </div>
 </body>
 </html>
