--- a/public/html/login.html
+++ b/public/html/login.html
@@ -11,40 +11,21 @@
 </head>
 
 <body>
-    <img src="../assets//logo.svg" class="logo" alt="">
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <img src="../assets/logo.svg" class="logo" alt="">
 
     <div class="login-ctr">
         <h2 class="login-header">Log In</h2>
-        <br/>
 
         <form class="login-inputs">
             <label for="username">username</label>
             <input class="textfield user" name="username" type="text" />
             <label for="password">password</label>
             <input class="textfield pass" name="password" type="password" />
-            <br/>
-            <br/>
             <button type="submit">Let's go!</button>
         </form>
     </div>
-  
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
-     <br/>
 
     <h3 class="bottom">edfusion</h3>
-
-
 </body>
 
 </html>
