classcode css done, student count working :/

--- a/public/html/classcode.html
+++ b/public/html/classcode.html
@@ -18,6 +18,7 @@
             <h1 class="class_code"></h1>
         </div>
         <button id="start-class">begin session</button>
+        <h2 class="num-students"><strong class="student-val">0</strong> students connected.</h2>
     </div>
 </body>
 </html>
