--- a/public/html/classroom.html
+++ b/public/html/classroom.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Classroom</title>
+
     <script src="../js/classroom.js"></script>
 
+    <link rel="stylesheet" href="../css/general.css">
+    <link rel="stylesheet" href="../css/classroom.css">
 </head>
 <body>
-    <p>Classroom</p>
-    <button id="end-class">End class</button>
-    <div class="confusion">
-        <canvas id="session_confusion" width="400" height="400"></canvas>
-    </div>
-    <div class="questions"> 
+    <img src="../assets/logo.svg" class="logo" alt="">
+    <div class="main-ctr">
+        <div class="top-ctr">
+            <h2 class="title">Classroom</h2>
+            <button id="end-class">End class</button>
+        </div>
+        <div class="confusion">
+            <canvas id="session_confusion" width="400" height="400"></canvas>
+        </div>
+        <div class="questions"> 
+        </div>
     </div>
 </body>
 </html>
