set minwidth of 1050px

--- a/public/html/classroom.html
+++ b/public/html/classroom.html
@@ -15,12 +15,15 @@
     <div class="main-ctr">
         <div class="top-ctr">
             <h2 class="title">Classroom</h2>
-            <button id="end-class">End class</button>
+            <button class="button" id="end-class">End class</button>
         </div>
         <div class="confusion">
             <canvas id="session_confusion" width="400" height="400"></canvas>
         </div>
-        <div class="questions"> 
+        <div class="questions-ctr">
+            <h2 class="questions-header">Questions</h2>
+            <div class="questions"> 
+            </div>
         </div>
     </div>
 </body>
