Added incorrect credentials error

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -18,7 +18,7 @@
         <div class="login-ctr">
 
             <h2 class="login-header">Log In</h2>
-
+            <h5 id = "error"></h5>
             <form class="login-inputs">
                 <label for="username">username</label>
                 <input class="textfield user" name="username" type="text" />
