dashboard css file update

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -15,13 +15,12 @@
     <div class="nav"></div>
 
     <div class="brand">
-        <h1 id="dashboard">Dashboard</h1>
+        <h1 id="dash">Dashboard</h1>
       </div>
 
 
 
     <div class="graphs">
-        
 
         <div class="canvasDiv">
             <canvas id="confusion"></canvas>
