centered login page and class code page

--- a/public/html/classcode.html
+++ b/public/html/classcode.html
@@ -11,14 +11,16 @@
     <script src="../js/classcode.js"></script>
 </head>
 <body>
-    <img src="../assets/logo.svg" class="logo" alt="">
-    <div class="main-ctr">
-        <h2 class="guide">Go to <strong>edfusion.herokuapp.com</strong> and enter this class code:</h2>
-        <div class="code-ctr">
-            <h1 class="class_code"></h1>
+    <div class="flex-ctr">
+        <img src="../assets/logo.svg" class="logo" alt="">
+        <div class="main-ctr">
+            <h2 class="guide">Go to <strong>edfusion.herokuapp.com</strong> and enter this class code:</h2>
+            <div class="code-ctr">
+                <h1 class="class_code"></h1>
+            </div>
+            <button id="start-class">begin session</button>
+            <h2 class="num-students"><strong class="student-val">0</strong> students connected.</h2>
         </div>
-        <button id="start-class">begin session</button>
-        <h2 class="num-students"><strong class="student-val">0</strong> students connected.</h2>
     </div>
 </body>
 </html>
