--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,20 +12,20 @@
 
 <body>
     <div class="box"></div>
-    <div id="login_content">
-        <img src="../assets/logo.svg" class="logo" alt="">
-        
-        <div class="login-ctr">
-
-            <h2 class="login-header">Log In</h2>
-            <h5 id = "error"></h5>
-            <form class="login-inputs">
-                <label for="username">username</label>
-                <input class="textfield user" name="username" type="text" />
-                <label for="password">password</label>
-                <input class="textfield pass" name="password" type="password" />
-                <button type="submit">Let's go!</button>
-            </form>
+    <div class="flex-ctr">
+        <div id="login_content">
+            <img src="../assets/logo.svg" class="logo" alt="">
+            <div class="login-ctr">
+                <h2 class="login-header">Log In</h2>
+                <h5 id="error"></h5>
+                <form class="login-inputs">
+                    <label for="username">username</label>
+                    <input class="textfield user" name="username" type="text" />
+                    <label for="password">password</label>
+                    <input class="textfield pass" name="password" type="password" />
+                    <button type="submit">Let's go!</button>
+                </form>
+            </div>
         </div>
     </div>
 
