styling for notification window

--- a/public/html/questionWindow.html
+++ b/public/html/questionWindow.html
@@ -6,13 +6,18 @@
     <title>Question Viewer</title>
 
     <link rel="stylesheet" href="../css/general.css">
-    <link rel="stylesheet" href="../css/classcode.css">
+    <link rel="stylesheet" href="../css/questionWindow.css">
 
     <script src="../js/questionWindow.js"></script>
 </head>
 <body>
     <h2 class="question"></h2>
-    <button class="mute">Mute</button>
-    <button class="delete">Resolve</button>
+    <div class="around">   
+        <div class="buttonContainer">
+            <button class="mute">Mute</button>
+            <button class="delete">Resolve</button>
+        </div>
+    </div>
+ 
 </body>
 </html>
