switched username to email

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -19,7 +19,7 @@
                 <h2 class="login-header">Log In</h2>
                 <h5 id="error"></h5>
                 <form class="login-inputs">
-                    <label for="username">username</label>
+                    <label for="username">email</label>
                     <input class="textfield user" name="username" type="text" />
                     <label for="password">password</label>
                     <input class="textfield pass" name="password" type="password" />
