added little intro tooltip

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -51,6 +51,9 @@
 
             </div>
         </div>
+        <div class="tooltip">
+            <h2 class="title">Welcome to edfusion. Press start class to create a live classroom environment.</h2>
+        </div>
     </div>
 </body>
 
