all buttons are now disabled on click

--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="tooltip">
-            <h2 class="title">Welcome to edfusion. Press start class to create a live classroom environment.</h2>
+            <h2 class="title"><strong>Welcome to edfusion.</strong> Press start class to create a live classroom environment.</h2>
         </div>
     </div>
 </body>
