--- a/public/html/login.html
+++ b/public/html/login.html
@@ -23,7 +23,7 @@
                     <input class="textfield user" name="username" type="text" />
                     <label for="password">password</label>
                     <input class="textfield pass" name="password" type="password" />
-                    <button type="submit">Let's go!</button>
+                    <button class="submit-button" type="submit">Let's go!</button>
                 </form>
             </div>
         </div>
